sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: type mismatch;
 found   : Int
 required: ?{def /(x$1: ? >: Double(1.3)): ?}
Note that implicit conversions are not applicable because they are ambiguous:
 both method int2long in object Int of type (x: Int)Long
 and method int2float in object Int of type (x: Int)Float
 are possible conversion functions from Int to ?{def /(x$1: ? >: Double(1.3)): ?}
      ecart=ecart/1.3;
            ^AlgCombSort:11: error: overloaded method value / with alternatives:
  (x: Int)Int <and>
  (x: Char)Int <and>
  (x: Short)Int <and>
  (x: Byte)Int
 cannot be applied to (Double)
      ecart=ecart/1.3;
                 ^AlgCombSort:14: error: not found: value i
    i=0;
    ^AlgCombSort:15: error: not found: value i
    while(i+ecart<getNombreValeurs())
          ^AlgCombSort:17: error: not found: value int
      if(plusPetit(int(i+ecart),i))
                   ^AlgCombSort:17: error: not found: value i
      if(plusPetit(int(i+ecart),i))
                       ^AlgCombSort:17: error: not found: value i
      if(plusPetit(int(i+ecart),i))
                                ^AlgCombSort:19: error: not found: value echanger
        echanger(int(i+ecart),i);
        ^AlgCombSort:19: error: not found: value int
        echanger(int(i+ecart),i);
                 ^AlgCombSort:19: error: not found: value i
        echanger(int(i+ecart),i);
                     ^AlgCombSort:19: error: not found: value i
        echanger(int(i+ecart),i);
                              ^AlgCombSort:20: error: not found: value i
        i+=1;
        ^